[2단계 - 로또(수동)] 리차드(전형중) 미션 제출합니다. (#441)
* refactor(lotto): 다른 로또와 비교해서 같은 숫자 갯수를 세는 메서드 로직 retainAll 사용하도록 수정

* refactor(lottos): 로또 묶음 생성 중 null 검증 시 Objects.requireNonNull 사용하는 것으로 수정

* refactor(lotto-result-handler): 당첨 금액과 횟수로 총 상금을 구하는 로직 일부 메서드 참조로 변경

* refactor(lotto): Lotto 생성자 내 null 검증 추가 및 관련 테스트 코드 추가

* refactor(lottos): Lottos 생성자 내 unmodifiableList() -> List.copyOf 변경

* refactor(lotto): 상수인 오류메시지 접근제어자 package-private -> private 변경

* refactor(domains): factory, util, repository 패키지에 있던 클래스 3개 domain 패키지로 이동

* refactor(lotto): 로또 가격 상수 이동 LottoController -> Lotto

* refactor(lotto-factory): 로또 생성 로직 관련 멀티스레드 대응 처리

* test(study): ArrayList, LinkedList 사용법 스터디 테스트 코드 추가

* feat(manual-lotto-quantity): 수동 로또 구매 수량을 담을 vo 추가

* feat(view): 수동 로또 구매 수량 입력 받기 구현

* refactor(money): 역할 변경에 따른 클래스명 변경 InputMoney -> Money

* refactor(wallet): 역할 확장에 따른 클래스명 변경 및 테스트코드 추가 Money -> Wallet

* refactor(wallet): 잔액이 0인지 확인하는 isEmpty 메서드 추가

* refactor(lottos): 두 개의 로또 묶음을 병합하는 merge 메서드 구현

* refactor(controller): 수동 로또 구현을 위한 컨트롤러 내 코드 조합

* refactor(view): InputView 2단계 구현 후 메소드 사용 순으로 재정렬

* style(view): ResultView 누락된 개행 추가 및 불필요한 , 제거

* refactor(lottos): Lottos 생성자 내 final 선언 제거

* test(lotto): getter로 반환된 컬렉션에 대한 수정 시도시 UOE 발생 테스트코드 추가

* refactor(vo): Wallet 기능 확장으로 불필요해진 VO 제거

* test(wallet): Wallet 수동 자동 구매 및 잔액 확인 테스트코드 추가

* fix(view): 수동 로또 번호 입력 시 입력 안내 문구 반복 출력되던 오류 수정

* fix(lotto-factory): LottoFactory 에 자동 로또 구매 수량을 1 미만 전달시 IAE 발생시키도록 수정

* docs(readme): 2단계 구현에 맞춰 README.md 업데이트

* fix(rank): 당첨 등수 판별 로직 수정, BiPredicate 적용, 등수별 테스트코드 추가

* refactor(lotto-result-handler): 당첨 결과 집계 시 LongSummaryStatistics 활용

* fix(lotto-result-dto): 생성자에서 사용하는 메서드 수정 unmodifiableMap -> copyOf

* test(lotto-factory): 멀티스레드 로또 생성 대응 관련 누락된 assert문 추가

* refactor(wallet): Wallet.java 패키지 이동 vo -> domain

* Update src/main/java/domain/Lotto.java

refactor(lotto): 생성자 내 copyOf 선언위치 최상단에서 필드 주입시점으로